--- a/index.html
+++ b/index.html
@@ -135,27 +135,27 @@
 
         <div class="section2__linea2">
             <img class="section2__torta position--absolute cupcake__torta" src="./images/section2__torta.png" alt="chocolate piece Section1"> 
-
         </div>
 
         <div class="section2__linea1">
             <img class="sectio2__cupcake   position--absolute cupcake__torta" src="./images/section2__cupcake.png" alt="Section2 cupcake">    
-
         </div>
     </section>
 
     <section class="section3 position--relative ">
 
-        <img class="section3__pastel" src="./images/section3__pastel.jpg" alt="pastel seccion 3">
+        <img class="section3__pastel position--absolute estilo--img" src="./images/section3__pastel.jpg" alt="pastel seccion 3">
 
-        <div>
+        <div class="section3--div">
             <h3 class="section3__textDetails">QUICK LOOK FOR</h3>
             <h1 class="section3__textDetails" section3__textDetails>Some of our products</h1>
         </div>          
 
+        <div class="section3--div2 flex">
             <button>Todo</button>
             <button>Brownies</button>
             <button>Bombones</button>      
+        </div>
     
             <a href="#">SEE MORE</a>
 
