--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
             </p>
         </div>
     </section>
-
     
     <section class="section2 position--relative">
 
@@ -152,10 +151,38 @@
         </div>          
 
         <div class="section3--div2 flex">
-            <button>Todo</button>
+            <button>All</button>
             <button>Brownies</button>
-            <button>Bombones</button>      
+            <button>Cakes</button>      
         </div>
+
+        <div class="section3__galery">
+            <div class="galery__item">
+                <img src="./images/chocolate1.png" alt="" class="galery__img">
+                <h3 class="galery__nombre">imagen 1</h3>
+            </div>
+            <div class="galery__item">
+                <img src="./images/chocolate2.png" alt="" class="galery__img">
+                <h3 class="galery__nombre">imagen 2</h3>
+            </div>
+            <div class="galery__item">
+                <img src="./images/chocolate3.png" alt="" class="galery__img">
+                <h3 class="galery__nombre">imagen 3</h3>
+            </div>
+            <div class="galery__item">
+                <img src="./images/chocolate4.png" alt="" class="galery__img">
+                <h3 class="galery__nombre">imagen 4</h3>
+            </div>
+            <div class="galery__item">
+                <img src="./images/chocolate5.png" alt="" class="galery__img">
+                <h3 class="galery__nombre">imagen 5</h3>
+            </div>
+            <div class="galery__item">
+                <img src="./images/chocolate6.png" alt="" class="galery__img">
+                <h3 class="galery__nombre">imagen 6</h3>
+            </div>
+        </div>
+
     
             <a href="#">SEE MORE</a>
 
