galery looking good

--- a/index.html
+++ b/index.html
@@ -151,40 +151,42 @@
         </div>          
 
         <div class="section3--div2 flex">
-            <button>All</button>
-            <button>Brownies</button>
-            <button>Cakes</button>      
+            <button class="div2--button">All</button>
+            <button class="div2--button">Brownies</button>
+            <button class="div2--button">Cakes</button>      
         </div>
 
         <div class="section3__galery">
             <div class="galery__item">
-                <img src="./images/chocolate1.png" alt="" class="galery__img">
+                <img src="./images/chocolate1.png" alt="" class="galery__img section3--esquina1">
                 <h3 class="galery__nombre">imagen 1</h3>
             </div>
             <div class="galery__item">
-                <img src="./images/chocolate2.png" alt="" class="galery__img">
+                <img src="./images/chocolate2.png" alt="" class="galery__img section3--esquina3">
                 <h3 class="galery__nombre">imagen 2</h3>
             </div>
             <div class="galery__item">
-                <img src="./images/chocolate3.png" alt="" class="galery__img">
+                <img src="./images/chocolate3.png" alt="" class="galery__img section3--esquina4">
                 <h3 class="galery__nombre">imagen 3</h3>
             </div>
             <div class="galery__item">
-                <img src="./images/chocolate4.png" alt="" class="galery__img">
+                <img src="./images/chocolate4.png" alt="" class="galery__img section3--esquina2">
                 <h3 class="galery__nombre">imagen 4</h3>
             </div>
             <div class="galery__item">
-                <img src="./images/chocolate5.png" alt="" class="galery__img">
+                <img src="./images/chocolate5.png" alt="" class="galery__img section3--esquina1">
                 <h3 class="galery__nombre">imagen 5</h3>
             </div>
             <div class="galery__item">
-                <img src="./images/chocolate6.png" alt="" class="galery__img">
+                <img src="./images/chocolate6.png" alt="" class="galery__img section3--esquina3">
                 <h3 class="galery__nombre">imagen 6</h3>
             </div>
         </div>
 
-    
+        <div class="section3__seeMore flex">
             <a href="#">SEE MORE</a>
+
+        </div>
 
 
     </section>
