background img news letter added

--- a/index.html
+++ b/index.html
@@ -185,10 +185,11 @@
 
         <div class="section3__seeMore flex">
             <a href="#">SEE MORE</a>
-
         </div>
+    </section>
 
-
+    <section>
+        <img src="./images/news__letter.png" alt="news letter fondo">
     </section>
     
 </body>
