changes in ccs organization

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     
 </head>
 <body>
-    <header>
-        
+    <header>        
         <nav class="nav flex">
             <div class="flex aling-items-center">
             <ul class="menu flex aling-items-center ">
@@ -107,7 +106,7 @@
 
         <div class="position--relative">
             <h2>Capriccio & Delizia</h2>
-            <img class="moronitas" src="./images/moronitas.png" alt="moronas">
+            <img class="moronitas position--absolute" src="./images/moronitas.png" alt="moronas">
         </div>
 
         <img class="position--relative" src="./images/fondo_section1.png" alt="imagen Section1" width="100%">
