news letter done

--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
            <p class="">Sign up to receive emails from Capriccio & Delizia about products, offers and tips to enjoy 10% off your next order! Restrictions apply.                    
            </p>
 
+           <input type="text" name="correo" id="email"  class="section4__email" placeholder="Escribe tu correo">
+           <input type="submit" value="SIGN UP" class="email__button">
         </div>
+        
     </section>
 
     <footer class="footer">
