--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
             </ul>
 
-            <ul class="nav__icon flex">
+            <ul class="nav__icon flex aling-items-center">
                 <li class="menu__icon">
                     <button>
                         <img src="./images/search_Icon.png" alt="icono buscar">             
