--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="media-queries.css">
     
 </head>
 <body>
