cake products banner done

--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,7 @@
 
                 <li class="menu__icon">
                     <a href="">
-                        <img src="../images/heart_Icon.png" alt="icono corazon">                      
+                        <img src="../images/profiel_icon.png" alt="icono corazon">                      
                     </a>
 
                 </li>
@@ -119,7 +119,7 @@
     
     <section class="Exquisite__hapiness__section2 position--relative">
 
-        <img class="Exquisite__hapiness__background" src="../images/fondo_body.png" alt="textura body">
+        <img class="Exquisite__hapiness__background" src="../images/body/fondo_body.png" alt="textura body">
 
         <div class="position--absolute">
             <h2>YOUR CHOICE</h2>
