--- a/shopCake.html
+++ b/shopCake.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./shopCake.css">
+    <link rel="stylesheet" href="../shopCake.css">
 </head>
 <body>
     
@@ -30,7 +30,7 @@
 
             <div class="nav__logo flex aling-items-center " >
                 <a href="#">
-                    <img src="./images/logo.png" alt="CyD">
+                    <img src="../images/logo.png" alt="CyD">
                 </a>
             </div>
 
@@ -49,20 +49,20 @@
             <ul class="nav__icon flex aling-items-center">
                 <li class="menu__icon">
                     <button>
-                        <img src="./images/search_Icon.png" alt="icono buscar">             
+                        <img src="../images/search_Icon.png" alt="icono buscar">             
                     </button>                   
                 </li>
 
                 <li class="menu__icon">
                     <a href="">
-                        <img src="./images/heart_Icon.png" alt="icono corazon">                      
+                        <img src="./images/profiel_icon.png" alt="icono corazon">               
                     </a>
 
                 </li>
 
                 <li class="menu__icon">
                     <a href="">
-                        <img src="./images/shop_Icon.png" alt="icono carrito de compras">                      
+                        <img src="./images/shop_Icon.png" alt="icono carrito de compras">               
                     </a>
                 </li>
             </ul>
@@ -91,6 +91,22 @@
             </div>
         </div>
 
+    </section>
+
+    <section class="specialties__section1 position--relative">
+
+        <img class="specialties__background" src="../images/body/fondo_body2.png" alt="textura body">
+
+        <div class="specialties__text position--absolute text--details">
+        <h2 class="">THE</h2>
+        <h1 class="">Capriccio & Delizia specialties</h1> 
+
+    </div>
+    <div class="position--absolute flex">
+        <p>Discover a delicious combination of textures and flavors. We roast only the best hazelnuts, bathe them in smooth chocolate cream and wrap them in a crispy wafer and hazelnut pieces.
+    </div>
+
+    </p>
     </section>
 
 
