--- a/html/index.html
+++ b/html/index.html
@@ -56,20 +56,20 @@
             <ul class="nav__icon flex aling-items-center">
                 <li class="menu__icon">
                     <button>
-                        <img src="../images/search_Icon.png" alt="icono buscar">             
+                        <img src="../images/icosn_header/search_Icon.png" alt="icono buscar">             
                     </button>                   
                 </li>
 
                 <li class="menu__icon">
                     <a href="">
-                        <img src="../images/profiel_icon.png" alt="icono corazon">                      
+                        <img src="../images/icosn_header/profiel_icon.png" alt="icono corazon">                      
                     </a>
 
                 </li>
 
                 <li class="menu__icon">
                     <a href="">
-                        <img src="../images/shop_Icon.png" alt="icono carrito de compras">                      
+                        <img src="../images/icosn_header/shop_Icon.png" alt="icono carrito de compras">                      
                     </a>
                 </li>
             </ul>
@@ -82,8 +82,6 @@
     <section class="banner position--relative">
         <img class="banner__img position--relative" src="../images/fondoBanner.png" alt="img header" width="100%">
 
-        <!--<div class="fondo__degrade"></div>-->
-    
         <div class="fondo__degrade">
             <h2 class="text--details estilo--h3 ">DID YOU KNOW?</h2>    
             <h1 class="text--details">Divenely Delicious</h1>    
