--- a/shopCake.html
+++ b/shopCake.html
@@ -49,20 +49,20 @@
             <ul class="nav__icon flex aling-items-center">
                 <li class="menu__icon">
                     <button>
-                        <img src="../images/search_Icon.png" alt="icono buscar">             
+                        <img src="../images/icosn_header/search_Icon.png" alt="icono buscar">             
                     </button>                   
                 </li>
 
                 <li class="menu__icon">
                     <a href="">
-                        <img src="./images/profiel_icon.png" alt="icono corazon">               
+                        <img src="../images/icosn_header/profiel_icon.png" alt="icono corazon">               
                     </a>
 
                 </li>
 
                 <li class="menu__icon">
                     <a href="">
-                        <img src="./images/shop_Icon.png" alt="icono carrito de compras">               
+                        <img src="../images/icosn_header/shop_Icon.png" alt="icono carrito de compras">               
                     </a>
                 </li>
             </ul>
@@ -109,6 +109,41 @@
           </div>
     
     </section>
+
+    <div class="cake_gallery_container">
+      <div class="gallery__item">
+        <img src="../images/cake__product/cake1.png" alt="" class="gallery__img">
+        <h2 class="gallery__img_name">cake 1</h2>
+      </div>
+      <div class="gallery__item">
+        <img src="../images/cake__product/cake2.png" alt="" class="gallery__img">
+        <h2 class="gallery__img_name">cake 2</h2>
+      </div>
+      <div class="gallery__item">
+        <img src="../images/cake__product/cake3.png" alt="" class="gallery__img">
+        <h2 class="gallery__img_name">cake 3</h2>
+      </div>
+      <div class="gallery__item">
+        <img src="../images/cake__product/cake4.png" alt="" class="gallery__img">
+        <h2 class="gallery__img_name">cake 4</h2>
+      </div>
+      <div class="gallery__item">
+        <img src="./images/cake__product/cake5.png" alt="" class="gallery__img">
+        <h2 class="gallery__img_name">cake 5</h2>
+      </div>
+      <div class="gallery__item">
+        <img src="../images/cake__product/cake6.png" alt="" class="gallery__img">
+        <h2 class="gallery__img_name">cake 6</h2>
+      </div>
+      <div class="gallery__item">
+        <img src="./images/cake__product/cake7.png" alt="" class="gallery__img">
+        <h2 class="gallery__img_name">cake 7</h2>
+      </div>
+      <div class="gallery__item">
+        <img src="../images/cake__product/cake8.png" alt="" class="gallery__img">
+        <h2 class="gallery__img_name">cake 8</h2>
+      </div>
+    </div>
 
     
 
