--- a/html/index.html
+++ b/html/index.html
@@ -130,11 +130,11 @@
         </div>
 
         <div class="Exquisite__hapiness__linea2">
-            <img class="section2__torta position--absolute section2__cupcake__torta" src="../images/section2__torta.png" alt="chocolate piece Section1"> 
+            <img class="section2__torta position--absolute section2__cupcake__torta" src="../images/section2/section2__torta.png" alt="chocolate piece Section1"> 
         </div>
 
         <div class="Exquisite__hapiness__linea1">
-            <img class="sectio2__cupcake   position--absolute section2__cupcake__torta" src="../images/section2__cupcake.png" alt="Section2 cupcake">    
+            <img class="sectio2__cupcake   position--absolute section2__cupcake__torta" src="../images/section2/section2__cupcake.png" alt="Section2 cupcake">    
         </div>
     </section>
 
