--- a/shopCake.html
+++ b/shopCake.html
@@ -97,8 +97,7 @@
 
         <img class="specialties__background" src="../images/body/fondo_body2.png" alt="textura body">
 
-        <div class="specialties__text flex"></div>
-
+       
           <div class="specialties__title position--absolute text--details" >
           <h2 class="">THE</h2>
           <h1 class="">Capriccio & Delizia specialties</h1> 
@@ -107,40 +106,44 @@
           <div class="specialties__description position--absolute">
               <p>Discover a delicious combination of textures and flavors. We roast only the best hazelnuts, bathe them in smooth chocolate cream and wrap them in a crispy wafer and hazelnut pieces.</p>
           </div>
+
+          <div class="specialties__seeMore__btn flex position--relative">
+            <a href="#">SEE MORE</a>
+        </div>
     
     </section>
 
-    <div class="cake_gallery_container">
+    <div class="cake_gallery_container position--relative">
       <div class="gallery__item">
-        <img src="../images/cake__product/cake1.png" alt="" class="gallery__img">
+        <img src="./images/cake_product/cake1.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 1</h2>
       </div>
       <div class="gallery__item">
-        <img src="../images/cake__product/cake2.png" alt="" class="gallery__img">
+        <img src="./images/cake_product/cake2.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 2</h2>
       </div>
       <div class="gallery__item">
-        <img src="../images/cake__product/cake3.png" alt="" class="gallery__img">
+        <img src="./images/cake_product/cake3.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 3</h2>
       </div>
       <div class="gallery__item">
-        <img src="../images/cake__product/cake4.png" alt="" class="gallery__img">
+        <img src="./images/cake_product/cake4.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 4</h2>
       </div>
       <div class="gallery__item">
-        <img src="./images/cake__product/cake5.png" alt="" class="gallery__img">
+        <img src="./images/cake_product/cake5.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 5</h2>
       </div>
       <div class="gallery__item">
-        <img src="../images/cake__product/cake6.png" alt="" class="gallery__img">
+        <img src="./images/cake_product/cake6.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 6</h2>
       </div>
       <div class="gallery__item">
-        <img src="./images/cake__product/cake7.png" alt="" class="gallery__img">
+        <img src="./images/cake_product/cake7.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 7</h2>
       </div>
       <div class="gallery__item">
-        <img src="../images/cake__product/cake8.png" alt="" class="gallery__img">
+        <img src="./images/cake_product/cake8.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 8</h2>
       </div>
     </div>
