finally, i almost cry

--- a/login.html
+++ b/login.html
@@ -5,8 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
     <script src="./app.js" type="module"></script>
+
+    <header>        
+        <nav class="nav flex">
+            <div class="flex aling-items-center">
+            <ul class="menu flex aling-items-center ">
+                <li class="menu__item">
+                    <a href="#">About Us</a>
+                </li>
+
+                <li class="menu__item">
+                    <a href="#">New Collection</a>
+                </li>
+
+                <li class="menu__item">
+                    <a href="#">Products</a>
+                </li>
+            </ul>
+        </div>
+
+            <div class="nav__logo flex aling-items-center " >
+                <a href="#">
+                    <img src="./images/logo.png" alt="CyD">
+                </a>
+            </div>
+
+            <div class="flex aling-items-center ">
+            <ul class="menu2 flex">
+                <li class="menu__item">
+                    <a href="#">Gift Boxes</a>
+                </li>
+
+                <li class="menu__item">
+                    <a href="#">Contac Us</a>
+                </li>
+        
+            </ul>
+
+            <ul class="nav__icon flex aling-items-center">
+                <li class="menu__icon">
+                    <button>
+                        <img src="./images/icosn_header/search_Icon.png" alt="icono buscar">             
+                    </button>                   
+                </li>
+
+                <li class="menu__icon">
+                    <a href="">
+                        <img src="./images/icosn_header/profiel_icon.png" alt="icono corazon">                      
+                    </a>
+
+                </li>
+
+                <li class="menu__icon">
+                    <a href="">
+                        <img src="./images/icosn_header/shop_Icon.png" alt="icono carrito de compras">                      
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        </nav>
+
+    </header>
 </body>
 </html>
