--- a/login.html
+++ b/login.html
@@ -72,5 +72,19 @@
         </nav>
 
     </header>
+
+    <section class="banner position--relative">
+        <img class="banner__img position--relative" src="./images/body/fondo_body3.png" alt="img header" width="100%">
+
+        <div class="fondo__degrade">
+            <h2 class="text--details estilo--h3 ">DID YOU KNOW?</h2>    
+            <h1 class="text--details">Divenely Delicious</h1>    
+            <p class="text--details parrafo">The scientific name of the cocoa tree translated from the Latin as Food of the Gods. Our pastry chef reflected the name of chocolate in its taste.                    
+            </p>
+    
+        </div>
+    
+
+    </section>
 </body>
 </html>
