sign up and login done

--- a/html/shopCake.html
+++ b/html/shopCake.html
@@ -115,7 +115,7 @@
 
     <div class="cake_gallery_container position--relative">
       <div class="gallery__item">
-        <img src="./images/cake_product/cake1.png" alt="" class="gallery__img">
+        <img src="../images/cake_product/cake1.png" alt="" class="gallery__img">
         <h2 class="gallery__img_name">cake 1</h2>
       </div>
       <div class="gallery__item">
