finish login page process

--- a/html/index.html
+++ b/html/index.html
@@ -175,7 +175,7 @@
             </div>
             <div class="gallery__item position--relative">
               <img src="../images/products/chocolate5.png" alt="" class="gallery__img">
-              <h2 class="gallery__img__name">See Chocolate Boxes</h2>
+              <h2 class="gallery__img__name">See sweet breakfats</h2>
             </div>
             <div class="gallery__item position--relative">
               <img src="../images/products/chocolate6.png" alt="" class="gallery__img">
