--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
 
             <form id="createUserForm">
                 <input type="text" placeholder="First Name" name="name">    
-                <input type="text" placeholder="Last Name" name="lastname">                    
+                <input type="text" placeholder="Last Name" name="lastName">                    
                 <input type="email" placeholder="Email" name="email">        
                 <input type="password" placeholder="password" name="password">        
                 <input type="submit" value="Create user">
