working on add product page

--- a/html/index.html
+++ b/html/index.html
@@ -179,7 +179,7 @@
             </div>
             <div class="gallery__item position--relative">
               <img src="../images/products/chocolate6.png" alt="" class="gallery__img">
-              <h2 class="gallery__img__name">See product</h2>
+              <h2 class="gallery__img__name">See Custom gifts</h2>
             </div>
           </div>  
 
