--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
-    <script src="./app.js" type="module"></script>
+    <script src="./src/scripts/app.js" type="module"></script>
 
     <header>        
         <nav class="nav flex">
