--- a/src/cart.html
+++ b/src/cart.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <link rel="stylesheet" href="../css/styles.css">
-
+    <title>My cart</title>
 </head>
 <body>
-    <section id="shop"></section>
-
     
-
 </body>
-<script src="../index.js"></script>
 </html>
