i think i found what was causing the error

--- a/src/cart.html
+++ b/src/cart.html
@@ -7,6 +7,16 @@
     <title>My cart</title>
 </head>
 <body>
+
+    <ul id="cart">
+        <li class="product">
+            <img class="product_image">
+            <h2 class="product_name"></h2>
+            <h3 class="product_price">Price</h3>
+            <button class="product_delete">Remove product</button>
+        </li>
+    </ul>
+    
     
 </body>
 </html>
