--- a/html/login.html
+++ b/html/login.html
@@ -77,7 +77,7 @@
 
         <div class="fondo__degrade">
           
-            <h2 class="text--details estilo--h3">Log in</h2>
+            <h2 class="estilo--h3">Log in</h2>
 
             <form id="createUserForm">
                 <input type="text" placeholder="First Name" name="name">    
