--- a/html/index.html
+++ b/html/index.html
@@ -61,8 +61,8 @@
                 </li>
 
                 <li class="menu__icon">
-                    <a href="">
-                        <img src="../images/icosn_header/profiel_icon.png" alt="icono corazon">                      
+                    <a href="./login.html">
+                        <img src="../images/icosn_header/profiel_icon.png" alt="icono profile">                      
                     </a>
 
                 </li>
