--- a/html/shopCake.html
+++ b/html/shopCake.html
@@ -143,7 +143,7 @@
 
     
    
-    <section class="products position--relative" id= "products">
+    <section class="products" id= "products">
       <!--<div class="cake_gallery_container position--relative">
       <div class="gallery__item">
         <img src="../images/cake_product/cake1.png" alt="" class="gallery__img">
